@@ -16,6 +16,9 @@
     <append_row>
       <name>image_row2</name>
     </append_row>
+    <append_row>
+      <name>progressbar_row</name>
+    </append_row>
   </layout>
 
   <factory type="grid" id="first_row">
@@ -55,4 +58,35 @@
 
   <dim id="radio-width">10</dim>
   <dim id="radio-height">10</dim>
+
+  <factory type="grid" id="progressbar_row">
+    <element>
+      <progressbar>progressbar_label_layout</progressbar>
+      <type>grid</type>
+      <config>
+	<value>25</value>
+	<maximum_value>50</maximum_value>
+	<appearance>test_progressbar</appearance>
+      </config>
+    </element>
+  </factory>
+
+  <layout type="grid" id="progressbar_label_layout">
+    <append_row>
+      <name>progressbar_label_row</name>
+    </append_row>
+  </layout>
+
+  <factory type="grid" id="progressbar_label_row">
+    <halign>
+      <halign>center</halign>
+    </halign>
+    <element>
+      <label>10%</label>
+    </element>
+  </factory>
+
+  <appearance type="progressbar" id="test_progressbar">
+    <label_font>serif; point_size=24</label_font>
+  </appearance>
 </theme>
